--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MovieFlixer</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="icon" href="./images/lag.png">
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="icon" href="./assets/images/lag.png">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     
@@ -16,7 +16,7 @@
 <body>
     <div class="header-container fade-in-on-scroll">
         <header>
-            <img alt="Logo" class="logo" src="images/lag.png" onclick="navigateToHome()">
+            <img alt="Logo" class="logo" src="./assets/images/lag.png" onclick="navigateToHome()">
             <h1 class="header-title" onclick="navigateToHome()">MovieFlixer</h1>
             <div class="icons" onclick="toggleMenu()">☰</div>
             <nav class="nav">
@@ -42,8 +42,8 @@
     <div id="movies-container" class="fade-in-on-scroll"></div>
     <div id="floating-description" class="floating-description"></div>
 
-    <script src="./js/script.js"></script>
-    <script src="./js/all.js"></script>
+    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/all.js"></script>
 </body>
 
 </html>
