--- a/movies/index.html
+++ b/movies/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MovieFlixer Movies</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/mov.css">
-    <link rel="icon" href="../images/lag.png">
+    <title>MovieDB Popular  Movies</title>
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/mov.css">
+    <link rel="icon" href="../assets/images/lag.png">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     
@@ -17,7 +17,7 @@
 <body>
     <div class="header-container fade-in-on-scroll">
         <header>
-            <img alt="Logo" class="logo" src="../images/lag.png" onclick="navigateToHome()">
+            <img alt="Logo" class="logo" src="../assets/images/lag.png" onclick="navigateToHome()">
             <h1 class="header-title" onclick="navigateToHome()">Movies</h1>
             <div class="icons" onclick="toggleMenu()">☰</div>
             <nav class="nav">
@@ -36,8 +36,8 @@
     <div id="movies-container" class="fade-in-on-scroll"></div>
     <div id="floating-description" class="floating-description"></div>
 
-    <script src="../js/movies.js"></script>
-    <script src="../js/all.js"></script>
+    <script src="../assets/js/movies.js"></script>
+    <script src="../assets/js/all.js"></script>
 </body>
 
 </html>
